src/resources/css/themes/Flat/General.css
/* General stylesheet for Flat theme
-------------------------------------*/

/* Button ----------------------*/
QPushButton
{
    background-color: rgb(250, 250, 250);
}

QPushButton:checked
{
    background-color: rgb(180, 180, 180);
}

QPushButton:hover
{
    background-color: white;
    color: black;
    border: 1px solid rgb(120, 120, 120);
}

QPushButton:disabled
{
    background-color: rgba(0, 0, 0, 20);
    color: rgba(0, 0, 0, 60)
}


/* Scroll bars ----------------------*/
QScrollBar:vertical,
QScrollBar:horizontal
{
    border: none;
    background-color: rgba(0, 0, 0, 40);
    margin: 0px;
}

QScrollBar:vertical
{
    width: 14px;
    margin-left: 6px;
}

QScrollBar:horizontal
{
    height: 14px;
    margin-top: 6px;
}

QScrollBar::handle:vertical,
QScrollBar::handle:horizontal
{
  border: 1px solid rgba(0, 0, 0, 45);
  background-color: rgba(255, 255, 255, 140);
  margin: 0px;
}

QScrollBar::handle:horizontal:hover,
QScrollBar::handle:vertical:hover
{
    background-color: rgba(255, 255, 255, 200);
}

QScrollBar::handle:vertical
{
  max-height: 20px;
  height: 20px;
}

QScrollBar::handle:horizontal
{
  max-width: 20px;
  width: 20px;
}

QScrollBar::add-line:vertical
{
  border: none;
  height: 10px;
  subcontrol-position: bottom;
  subcontrol-origin: margin;
}

QScrollBar::add-line:horizontal
{
  border: none;
  width: 10px;
  subcontrol-position: left;
  subcontrol-origin: margin;
}

QScrollBar::sub-line:vertical
{
  border: none;
  height: 10px;
  subcontrol-position: top;
  subcontrol-origin: margin;
}

QScrollBar::sub-line:horizontal
{
  border: none;
  width: 10px;
  subcontrol-position: right;
  subcontrol-origin: margin;
}

QScrollBar::add-page:vertical,
QScrollBar::sub-page:vertical,
QScrollBar::add-page:horizontal,
QScrollBar::sub-page:horizontal
{
  background: none;
}



/* Text fields (QLineEdit class) used in user name, channel name, etc.
-----------------------------------------------------------------------*/
QLineEdit
{
    background-color: rgb(254, 254, 254);
    border-color: rgba(0, 0, 0, 45);
    color: rgb(80, 80, 80);
}

QLineEdit:focus,
QLineEdit#groupNameField:focus
{
    border-color: rgba(0, 0, 0, 90);
    background-color: white;
    color: black;
}

QLineEdit#groupNameField-topLevel,
#userNameLineEdit-topLevel
{
    background-color: qlineargradient(x1:0, y1:0, x2:1, y2:0,
        stop: 0.0 white,
        stop: 0.5 rgb(235, 235, 235),
        stop: 1.0 white);
}

#userNameLineEdit-topLevel
{
    border: none;
}

QLineEdit#chatText-topLevel
{
    background-color: qlineargradient(x1:0, y1:0, x2:1, y2:0,
        stop: 0.0 rgb(235, 235, 235),
        stop: 0.3 white,
        stop: 0.7 white,
        stop: 1.0 rgb(235, 235, 235));
    border-color: rgba(0, 0, 0, 160);
}


/*  SLIDERs ++++++++++++++++++++++++++++++++ */

QSlider::groove:vertical
{
    border: none;
}

QSlider::groove:horizontal
{
    background-color: rgba(0, 0, 0, 50);
    height: 2px;
    border: none;
}
QSlider::groove:vertical
{
    background-color: rgba(0, 0, 0, 50);
    width: 2px;
}


QSlider::handle
{
    background: rgb(245, 245, 245);
    border: 1px outset rgb(120, 120, 120);
    border-radius: 2px;
}

QSlider::handle:hover
{
    background: rgb(250, 250, 250);
    border: 1px outset rgb(90, 90, 90);
}

QSlider::handle:horizontal
{
    margin-top: -6px;
    margin-bottom: -7px;
    padding: 0px;
    width: 8px;
    height: 15px;
}

QSlider::handle:vertical
{
    margin-left: -9px;
    margin-right: -9px;
    padding: 0px;
    height: 9px;
    width: 24px;
}




/* TabBar ----------------------*/
QTabBar::tab
{
    background-color: rgb(200, 200, 200);
}

QTabBar::tab:selected,
QTabBar::tab:hover
{
    background-color: rgb(180, 180, 180)
}

QTabBar::tab:!selected
{
    margin-top: 3px; /* make non-selected tabs look smaller */
    color: rgb(90, 90, 90);
}

QMenuBar::item
{
    color: black;
    background:rgb(225, 225, 225);
}

QMenuBar
{
    background:rgb(225, 225, 225);
    border-bottom: none;
    border-top: 1px solid rgb(90, 90, 90);
    border-left: 1px solid rgb(90, 90, 90);
    border-right: 1px solid rgbrgb(90, 90, 90);
}

QMenu
{
    border: 1px outset rgb(80, 80, 80);
    color: black;
    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
    stop:0 rgb(250, 250, 250),
    stop:1 rgb(230, 230, 230));
}


AudioMeter
{
    /* changing Audio Peak meter custom CSS properties */
    qproperty-rmsColor: rgb(150, 150, 150);
    qproperty-peakStartColor: rgb(0, 180, 0);
    qproperty-peakEndColor: rgb(255, 50, 50);
    qproperty-maxPeakColor: rgb(150, 150, 150);
}

AudioMeter#masterMeter
{
    qproperty-maxPeakColor: rgb(120, 120, 120);
    qproperty-rmsColor: rgb(120, 120, 120);
}

QComboBox {
    background-color: rgba(0, 0, 0, 30);
}

